--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KrishiYantra | कृषि यंत्र - Smart Farming Machinery for India</title>
+    <title>KrishiYantra | Smart Farming Machinery for India</title>
+    <!-- <link rel="icon" href="data:," /> -->
+    
+    <link rel="icon" href="/favicon2.jpg" />
     <meta name="description" content="Smart agricultural machinery recommendations for Indian farmers. Find and book the perfect farming equipment based on your location, soil type, and crop." />
     <meta name="author" content="KrishiYantra" />
 
